# name: TestOrganizationMembersAPI.test_list_organization_members_is_not_nplus1
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."email_opt_in",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21 /**/
  '
---
# name: TestOrganizationMembersAPI.test_list_organization_members_is_not_nplus1.1
  '
  SELECT "ee_license"."id",
         "ee_license"."created_at",
         "ee_license"."plan",
         "ee_license"."valid_until",
         "ee_license"."key",
         "ee_license"."max_users"
  FROM "ee_license"
  WHERE "ee_license"."valid_until" >= '2023-02-18T01:39:11.448173+00:00'::timestamptz /**/
  '
---
# name: TestOrganizationMembersAPI.test_list_organization_members_is_not_nplus1.10
  '
  SELECT "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_features",
         "posthog_organization"."usage",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist"
  FROM "posthog_organization"
  WHERE "posthog_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21 /*controller='organization_members-list',route='api/organizations/%28%3FP%3Cparent_lookup_organization_id%3E%5B%5E/.%5D%2B%29/members/%3F%24'*/
  '
---
# name: TestOrganizationMembersAPI.test_list_organization_members_is_not_nplus1.11
  '
  SELECT "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_features",
         "posthog_organization"."usage",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist"
  FROM "posthog_organization"
  WHERE "posthog_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21 /*controller='organization_members-list',route='api/organizations/%28%3FP%3Cparent_lookup_organization_id%3E%5B%5E/.%5D%2B%29/members/%3F%24'*/
  '
---
# name: TestOrganizationMembersAPI.test_list_organization_members_is_not_nplus1.12
  '
  SELECT (1) AS "a"
  FROM "posthog_organizationmembership"
  WHERE ("posthog_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "posthog_organizationmembership"."user_id" = 2)
  LIMIT 1 /*controller='organization_members-list',route='api/organizations/%28%3FP%3Cparent_lookup_organization_id%3E%5B%5E/.%5D%2B%29/members/%3F%24'*/
  '
---
# name: TestOrganizationMembersAPI.test_list_organization_members_is_not_nplus1.13
  '
  SELECT COUNT(*) AS "__count"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_user" ON ("posthog_organizationmembership"."user_id" = "posthog_user"."id")
  WHERE (NOT ("posthog_user"."email"::text LIKE '%@posthogbot.user')
         AND "posthog_user"."is_active"
         AND "posthog_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid) /*controller='organization_members-list',route='api/organizations/%28%3FP%3Cparent_lookup_organization_id%3E%5B%5E/.%5D%2B%29/members/%3F%24'*/
  '
---
# name: TestOrganizationMembersAPI.test_list_organization_members_is_not_nplus1.14
  '
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."email_opt_in",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_user" ON ("posthog_organizationmembership"."user_id" = "posthog_user"."id")
  WHERE (NOT ("posthog_user"."email"::text LIKE '%@posthogbot.user')
         AND "posthog_user"."is_active"
         AND "posthog_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid)
  ORDER BY "posthog_user"."first_name" ASC,
           "posthog_organizationmembership"."joined_at" DESC
  LIMIT 100 /*controller='organization_members-list',route='api/organizations/%28%3FP%3Cparent_lookup_organization_id%3E%5B%5E/.%5D%2B%29/members/%3F%24'*/
  '
---
# name: TestOrganizationMembersAPI.test_list_organization_members_is_not_nplus1.15
  '
  SELECT "otp_totp_totpdevice"."id",
         "otp_totp_totpdevice"."user_id",
         "otp_totp_totpdevice"."name",
         "otp_totp_totpdevice"."confirmed",
         "otp_totp_totpdevice"."throttling_failure_timestamp",
         "otp_totp_totpdevice"."throttling_failure_count",
         "otp_totp_totpdevice"."key",
         "otp_totp_totpdevice"."step",
         "otp_totp_totpdevice"."t0",
         "otp_totp_totpdevice"."digits",
         "otp_totp_totpdevice"."tolerance",
         "otp_totp_totpdevice"."drift",
         "otp_totp_totpdevice"."last_t"
  FROM "otp_totp_totpdevice"
  WHERE ("otp_totp_totpdevice"."name" = 'default'
         AND "otp_totp_totpdevice"."user_id" IN (1,
                                                 2,
                                                 3,
                                                 4,
                                                 5 /* ... */)) /*controller='organization_members-list',route='api/organizations/%28%3FP%3Cparent_lookup_organization_id%3E%5B%5E/.%5D%2B%29/members/%3F%24'*/
  '
---
# name: TestOrganizationMembersAPI.test_list_organization_members_is_not_nplus1.16
  '
  SELECT COUNT(*) AS "__count"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_user" ON ("posthog_organizationmembership"."user_id" = "posthog_user"."id")
  WHERE (NOT ("posthog_user"."email"::text LIKE '%@posthogbot.user')
         AND "posthog_user"."is_active"
         AND "posthog_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid) /*controller='organization_members-list',route='api/organizations/%28%3FP%3Cparent_lookup_organization_id%3E%5B%5E/.%5D%2B%29/members/%3F%24'*/
  '
---
# name: TestOrganizationMembersAPI.test_list_organization_members_is_not_nplus1.17
  '
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."email_opt_in",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_user" ON ("posthog_organizationmembership"."user_id" = "posthog_user"."id")
  WHERE (NOT ("posthog_user"."email"::text LIKE '%@posthogbot.user')
         AND "posthog_user"."is_active"
         AND "posthog_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid)
  ORDER BY "posthog_user"."first_name" ASC,
           "posthog_organizationmembership"."joined_at" DESC
  LIMIT 100 /*controller='organization_members-list',route='api/organizations/%28%3FP%3Cparent_lookup_organization_id%3E%5B%5E/.%5D%2B%29/members/%3F%24'*/
  '
---
# name: TestOrganizationMembersAPI.test_list_organization_members_is_not_nplus1.18
  '
  SELECT "otp_totp_totpdevice"."id",
         "otp_totp_totpdevice"."user_id",
         "otp_totp_totpdevice"."name",
         "otp_totp_totpdevice"."confirmed",
         "otp_totp_totpdevice"."throttling_failure_timestamp",
         "otp_totp_totpdevice"."throttling_failure_count",
         "otp_totp_totpdevice"."key",
         "otp_totp_totpdevice"."step",
         "otp_totp_totpdevice"."t0",
         "otp_totp_totpdevice"."digits",
         "otp_totp_totpdevice"."tolerance",
         "otp_totp_totpdevice"."drift",
         "otp_totp_totpdevice"."last_t"
  FROM "otp_totp_totpdevice"
  WHERE "otp_totp_totpdevice"."user_id" IN (1,
                                            2,
                                            3,
                                            4,
                                            5 /* ... */) /*controller='organization_members-list',route='api/organizations/%28%3FP%3Cparent_lookup_organization_id%3E%5B%5E/.%5D%2B%29/members/%3F%24'*/
  '
---
# name: TestOrganizationMembersAPI.test_list_organization_members_is_not_nplus1.19
  '
  SELECT "otp_static_staticdevice"."id",
         "otp_static_staticdevice"."user_id",
         "otp_static_staticdevice"."name",
         "otp_static_staticdevice"."confirmed",
         "otp_static_staticdevice"."throttling_failure_timestamp",
         "otp_static_staticdevice"."throttling_failure_count"
  FROM "otp_static_staticdevice"
  WHERE ("otp_static_staticdevice"."user_id" = 2
         AND "otp_static_staticdevice"."confirmed") /*controller='organization_members-list',route='api/organizations/%28%3FP%3Cparent_lookup_organization_id%3E%5B%5E/.%5D%2B%29/members/%3F%24'*/
  '
---
# name: TestOrganizationMembersAPI.test_list_organization_members_is_not_nplus1.2
  '
  SELECT "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_features",
         "posthog_organization"."usage",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist"
  FROM "posthog_organization"
  WHERE "posthog_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21 /*controller='organization_members-list',route='api/organizations/%28%3FP%3Cparent_lookup_organization_id%3E%5B%5E/.%5D%2B%29/members/%3F%24'*/
  '
---
# name: TestOrganizationMembersAPI.test_list_organization_members_is_not_nplus1.20
  '
  SELECT "otp_totp_totpdevice"."id",
         "otp_totp_totpdevice"."user_id",
         "otp_totp_totpdevice"."name",
         "otp_totp_totpdevice"."confirmed",
         "otp_totp_totpdevice"."throttling_failure_timestamp",
         "otp_totp_totpdevice"."throttling_failure_count",
         "otp_totp_totpdevice"."key",
         "otp_totp_totpdevice"."step",
         "otp_totp_totpdevice"."t0",
         "otp_totp_totpdevice"."digits",
         "otp_totp_totpdevice"."tolerance",
         "otp_totp_totpdevice"."drift",
         "otp_totp_totpdevice"."last_t"
  FROM "otp_totp_totpdevice"
  WHERE ("otp_totp_totpdevice"."user_id" = 2
         AND "otp_totp_totpdevice"."confirmed") /*controller='organization_members-list',route='api/organizations/%28%3FP%3Cparent_lookup_organization_id%3E%5B%5E/.%5D%2B%29/members/%3F%24'*/
  '
---
# name: TestOrganizationMembersAPI.test_list_organization_members_is_not_nplus1.21
  '
  SELECT "two_factor_phonedevice"."id",
         "two_factor_phonedevice"."user_id",
         "two_factor_phonedevice"."name",
         "two_factor_phonedevice"."confirmed",
         "two_factor_phonedevice"."throttling_failure_timestamp",
         "two_factor_phonedevice"."throttling_failure_count",
         "two_factor_phonedevice"."number",
         "two_factor_phonedevice"."key",
         "two_factor_phonedevice"."method"
  FROM "two_factor_phonedevice"
  WHERE ("two_factor_phonedevice"."user_id" = 2
         AND "two_factor_phonedevice"."confirmed") /*controller='organization_members-list',route='api/organizations/%28%3FP%3Cparent_lookup_organization_id%3E%5B%5E/.%5D%2B%29/members/%3F%24'*/
  '
---
# name: TestOrganizationMembersAPI.test_list_organization_members_is_not_nplus1.22
  '
  SELECT "otp_static_staticdevice"."id",
         "otp_static_staticdevice"."user_id",
         "otp_static_staticdevice"."name",
         "otp_static_staticdevice"."confirmed",
         "otp_static_staticdevice"."throttling_failure_timestamp",
         "otp_static_staticdevice"."throttling_failure_count"
  FROM "otp_static_staticdevice"
  WHERE ("otp_static_staticdevice"."user_id" = 2
         AND "otp_static_staticdevice"."confirmed") /*controller='organization_members-list',route='api/organizations/%28%3FP%3Cparent_lookup_organization_id%3E%5B%5E/.%5D%2B%29/members/%3F%24'*/
  '
---
# name: TestOrganizationMembersAPI.test_list_organization_members_is_not_nplus1.23
  '
  SELECT "otp_totp_totpdevice"."id",
         "otp_totp_totpdevice"."user_id",
         "otp_totp_totpdevice"."name",
         "otp_totp_totpdevice"."confirmed",
         "otp_totp_totpdevice"."throttling_failure_timestamp",
         "otp_totp_totpdevice"."throttling_failure_count",
         "otp_totp_totpdevice"."key",
         "otp_totp_totpdevice"."step",
         "otp_totp_totpdevice"."t0",
         "otp_totp_totpdevice"."digits",
         "otp_totp_totpdevice"."tolerance",
         "otp_totp_totpdevice"."drift",
         "otp_totp_totpdevice"."last_t"
  FROM "otp_totp_totpdevice"
  WHERE ("otp_totp_totpdevice"."user_id" = 2
         AND "otp_totp_totpdevice"."confirmed") /*controller='organization_members-list',route='api/organizations/%28%3FP%3Cparent_lookup_organization_id%3E%5B%5E/.%5D%2B%29/members/%3F%24'*/
  '
---
# name: TestOrganizationMembersAPI.test_list_organization_members_is_not_nplus1.3
  '
  SELECT "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_features",
         "posthog_organization"."usage",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist"
  FROM "posthog_organization"
  WHERE "posthog_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21 /*controller='organization_members-list',route='api/organizations/%28%3FP%3Cparent_lookup_organization_id%3E%5B%5E/.%5D%2B%29/members/%3F%24'*/
  '
---
# name: TestOrganizationMembersAPI.test_list_organization_members_is_not_nplus1.4
  '
  SELECT (1) AS "a"
  FROM "posthog_organizationmembership"
  WHERE ("posthog_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "posthog_organizationmembership"."user_id" = 2)
  LIMIT 1 /*controller='organization_members-list',route='api/organizations/%28%3FP%3Cparent_lookup_organization_id%3E%5B%5E/.%5D%2B%29/members/%3F%24'*/
  '
---
# name: TestOrganizationMembersAPI.test_list_organization_members_is_not_nplus1.5
  '
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:RATE_LIMIT_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1 /*controller='organization_members-list',route='api/organizations/%28%3FP%3Cparent_lookup_organization_id%3E%5B%5E/.%5D%2B%29/members/%3F%24'*/
  '
---
# name: TestOrganizationMembersAPI.test_list_organization_members_is_not_nplus1.6
  '
  SELECT COUNT(*) AS "__count"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_user" ON ("posthog_organizationmembership"."user_id" = "posthog_user"."id")
  WHERE (NOT ("posthog_user"."email"::text LIKE '%@posthogbot.user')
         AND "posthog_user"."is_active"
         AND "posthog_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid) /*controller='organization_members-list',route='api/organizations/%28%3FP%3Cparent_lookup_organization_id%3E%5B%5E/.%5D%2B%29/members/%3F%24'*/
  '
---
# name: TestOrganizationMembersAPI.test_list_organization_members_is_not_nplus1.7
  '
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."email_opt_in",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_user" ON ("posthog_organizationmembership"."user_id" = "posthog_user"."id")
  WHERE (NOT ("posthog_user"."email"::text LIKE '%@posthogbot.user')
         AND "posthog_user"."is_active"
         AND "posthog_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid)
  ORDER BY "posthog_user"."first_name" ASC,
           "posthog_organizationmembership"."joined_at" DESC
  LIMIT 100 /*controller='organization_members-list',route='api/organizations/%28%3FP%3Cparent_lookup_organization_id%3E%5B%5E/.%5D%2B%29/members/%3F%24'*/
  '
---
# name: TestOrganizationMembersAPI.test_list_organization_members_is_not_nplus1.8
  '
  SELECT "otp_totp_totpdevice"."id",
         "otp_totp_totpdevice"."user_id",
         "otp_totp_totpdevice"."name",
         "otp_totp_totpdevice"."confirmed",
         "otp_totp_totpdevice"."throttling_failure_timestamp",
         "otp_totp_totpdevice"."throttling_failure_count",
         "otp_totp_totpdevice"."key",
         "otp_totp_totpdevice"."step",
         "otp_totp_totpdevice"."t0",
         "otp_totp_totpdevice"."digits",
         "otp_totp_totpdevice"."tolerance",
         "otp_totp_totpdevice"."drift",
         "otp_totp_totpdevice"."last_t"
  FROM "otp_totp_totpdevice"
  WHERE ("otp_totp_totpdevice"."name" = 'default'
         AND "otp_totp_totpdevice"."user_id" IN (1,
                                                 2,
                                                 3,
                                                 4,
                                                 5 /* ... */)) /*controller='organization_members-list',route='api/organizations/%28%3FP%3Cparent_lookup_organization_id%3E%5B%5E/.%5D%2B%29/members/%3F%24'*/
  '
---
# name: TestOrganizationMembersAPI.test_list_organization_members_is_not_nplus1.9
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."email_opt_in",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21 /**/
  '
---
